# cmbstack

./: .gitignore  .readthedocs.yaml  README.md  conf.py  environment.yml  index.rst  pyproject.toml  requirements.txt  runtime_tests.py
D] Our trials/: D.1] map.ipynb  D.3] anu_stacking.py
cmbstack/: __init__.py  main.py  maps.py  stacking.py
cmbstack.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: api.rst  conf.py  index.rst  installation.rst
docs/tutorials/: tutorial.ipynb
examples/: from_theoretical_cl.ipynb
src/: maps.py
tests/: test_find_peaks.py  test_round.py
